Add CSA manual README for windowing demo and compatibility fixes